<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.cyberfiadh.apps.alanood.Main">

    <item android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:title="@string/core_new"
        android:showAsAction="always" />


    <item android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/core_edit"
        android:showAsAction="always" />


    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/core_search"
        android:showAsAction="always" />


    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/extra_actions_settings"
        android:showAsAction="always" />


    <item android:id="@+id/action_about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/extra_actions_about"
        android:showAsAction="always" />
</menu>
